# synthGPU-OS

./: .dockerignore  .env.example  .gitignore  .wslconfig  Dockerfile  OLLAMA_INTEGRATION.md  README.md  TECHNICAL_STATE_REPORT.md  docker-compose.wsl.yml  docker-compose.yml  ollama_proxy.py  probe_v03.py  push.ps1  requirements.txt  start.bat  start_all_optimized.bat  start_all_windows.bat  start_ollama_optimized.bat  start_ollama_windows.bat  start_synthgpu_optimized.bat  synthgpu-pod.yaml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
archive/synthgpu-v0.1.0-mvp/: __init__.py
archive/synthgpu-v0.1.0-mvp/core/: __init__.py  memory_manager.py  warp_scheduler.py
backend/: main.py  requirements.txt
backend/benchmarks/: runner.py
backend/synthgpu/: __init__.py  device.py  inference_proxy.py  memory_manager.py  onnx_provider.py  warp_scheduler.py
backend/synthgpu/ops/: __init__.py  gpu_ops.py
benchmarks/: benchmark_suite.py
cuda_shim/: CMakeLists.txt  README.md  install.bat  install.sh  setup.py
cuda_shim/include/: cublas.h  cublas_v2.h  cuda_runtime.h  cuda_runtime_api.h  cudnn.h  synthgpu_cuda.h
cuda_shim/install/: install_linux.sh  install_windows.bat  synthgpu_profile.sh
cuda_shim/kernels/: __init__.py  attention.py  bridge_api.py  conv2d.py  elementwise.py  embedding.py  gemm.py  norm.py  optimizer.py  reduction.py
cuda_shim/src/: bridge.c  bridge.h  cublas.c  cuda_streams.c  cudnn.c  device_info.c  event.c  memory.c  memory.h  python_bridge.c  shim.c  stream.c  telemetry.c  virtual_vram.c
cuda_shim/tests/: demo_client.c  test_basic.py  test_inference.py  test_perf.py  test_python_bridge_runtime.py  test_pytorch.py  test_vram_budget.c
demos/: investor_demo.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: BenchmarkRunner.jsx  CudaShimStatus.jsx  DemoReadyBadge.jsx  DevicePanel.jsx  EconomicsPanel.jsx  LLMInference.jsx  MemoryGauge.jsx  ModelUploader.jsx  PerformanceChart.jsx  RAMMonitor.jsx  SystemRAMMonitor.jsx  TokenGenerator.jsx  WarpMonitor.jsx
hypervisor/: Dockerfile.hypervisor  client_entrypoint.sh  docker-compose.hypervisor.yml  vgpu-k8s-matrix.yaml  vgpu_hypervisor.py
hypervisor/c_shim/: memory.c  shim.c
scripts/: check-docker-health.ps1  install.ps1  install.sh
synthgpu/core/: device.py  memory_manager.py  warp_scheduler.py
synthgpu/ops/: __init__.py  gpu_ops.py
tests/: test_cuda_shim.py  test_inference_connections.py  test_onnx_provider.py
tests/e2e/: test_dashboard.py
vulkan_icd/: CMakeLists.txt  README.md
vulkan_icd/bridge/: py_bridge.c
vulkan_icd/include/: spirv_dispatch.h  synthgpu_vk.h
vulkan_icd/manifests/: synthgpu_icd_debug.json  synthgpu_icd_linux.json  synthgpu_icd_win64.json
vulkan_icd/scripts/: install_linux.sh  install_windows.bat  make_dist.bat  uninstall.bat  uninstall.sh
vulkan_icd/src/: commands.c  device.c  icd_main.c  instance.c  memory.c  physical_device.c  pipeline.c  queue.c  spirv_dispatch.c  stubs.c
vulkan_icd/tests/: test_compute.py  test_enumeration.py  test_telemetry_runtime.py
